<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w4"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/message_box_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/message_box_shape"
            android:hint="@string/enter_your_message"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/send_image"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/send" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_activity_recycler_view"
        android:layout_width="match_parent"
        android:layout_above="@id/message_box_layout"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/leftarrow" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_picture"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/avatar3" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/username"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/video_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/audio_call"
                    android:contentDescription="@string/video_call"
                    android:src="@drawable/videocall" />

                <ImageView
                    android:id="@+id/audio_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/action_bar_menu"
                    android:contentDescription="@string/audio_call"
                    android:rotation="@integer/material_motion_duration_long_2"
                    android:src="@drawable/call" />

                <ImageView
                    android:id="@+id/action_bar_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/audio_call"
                    android:src="@drawable/menu" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>